--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,7 @@
   --fs-md: 16px;
 
   --spacing-inline: clamp(23.5px, calc(2vw + 1rem), 80px);
+  --bradius: 5px;
 }
 
 *,
@@ -40,4 +41,23 @@ body {
   font-size: 14px;
   font-weight: var(--fw-400);
   font-family: "Nunito Sans", sans-serif;
+
+  background-color: var(--clr-gray-400);
+}
+
+main {
+  padding-block-start: 30px;
+  padding-inline: var(--spacing-inline);
+
+  transition: padding 0.2s ease-in-out;
+}
+
+@media screen and (min-width: 46.875em) {
+  main {
+    padding-block-start: 48px;
+  }
+}
+
+img {
+  max-width: 100%;
 }
