--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -1,11 +1,17 @@
 .Form {
+  --height: 59px;
+
   display: flex;
   align-items: center;
   justify-content: space-between;
+  gap: 50px;
+  flex-wrap: wrap;
 }
 
-.Form {
-  display: block;
+@media screen and (min-width: 46.875em) {
+  .Form {
+    --height: 56px;
+  }
 }
 
 .Form__search {
@@ -17,14 +23,14 @@
   gap: 32px;
 
   width: min(100%, 480px);
-  height: 59px;
+  height: var(--height);
 
   border: 1px solid transparent;
   border-radius: var(--bradius);
   background-color: var(--clr-white);
   box-shadow: 0px 2px 4px hsla(200, 15%, 8%, 0.1);
 
-  transition: border-color var(--transition);
+  transition: border-color var(--transition), height var(--transition);
 }
 
 .Form__search:hover,
@@ -40,13 +46,6 @@
 
   aspect-ratio: 1 / 1;
   cursor: pointer;
-}
-
-@media screen and (min-width: 46.875em) {
-  .Form__search {
-    height: 56px;
-    transition: height var(--transition);
-  }
 }
 
 .Form__search input[type="search"] {
@@ -65,4 +64,110 @@
 
 .Form__search input[type="search"]:focus {
   color: var(--clr-blue-400);
+}
+
+.Form__filter {
+  --width: 248px;
+
+  position: relative;
+  font-weight: var(--fw-400);
+}
+
+@media screen and (min-width: 49.6875em) {
+  .Form__filter {
+    --width: 200px;
+  }
+}
+
+.Form__filter-btn {
+  width: var(--width);
+  height: var(--height);
+  padding-inline: 24px;
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+
+  border: 1px solid transparent;
+  border-radius: var(--bradius);
+  background-color: var(--clr-white);
+
+  cursor: pointer;
+  outline: none;
+  transition: border-color var(--transition), width var(--transition);
+  box-shadow: 0px 2px 4px hsla(200, 15%, 8%, 0.1);
+}
+
+.Form__filter-btn:hover,
+.Form__filter-btn:focus {
+  border: 1px solid var(--clr-blue-400);
+}
+
+.Form__filter-btn img[alt="arrow down icon"] {
+  width: 16px;
+}
+
+.Form__filter-options {
+  position: absolute;
+
+  width: var(--width);
+  height: 164px;
+  margin-block-start: 4px;
+  padding-block-start: 17px;
+  padding-inline: 16px;
+
+  list-style-type: none;
+  background-color: var(--clr-white);
+  border-radius: var(--bradius);
+  box-shadow: 0px 2px 4px hsla(200, 15%, 8%, 0.1);
+
+  animation-name: slide;
+  animation-duration: 0.2s;
+  animation-timing-function: ease-in-out;
+}
+
+.Form__filter-options li {
+  padding-block: 4px;
+  padding-inline-start: 8px;
+
+  border-radius: var(--bradius);
+
+  transition: background-color var(--transition);
+  cursor: pointer;
+
+  opacity: 0;
+  animation-name: appear;
+  animation-duration: 0.2s;
+  animation-timing-function: ease-in-out;
+  animation-delay: 0.2s;
+  animation-fill-mode: forwards;
+}
+
+.Form__filter-options li:hover,
+.Form__filter-options li:focus {
+  background-color: var(--clr-gray-400);
+}
+
+.Form__filter-options li.active {
+  background-color: var(--clr-gray-400);
+}
+
+@keyframes slide {
+  from {
+    opacity: 0;
+    height: 0;
+  }
+  to {
+    opacity: 1;
+    height: 164px;
+  }
+}
+
+@keyframes appear {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
 }
