--- a/src/components/form/Form.css
+++ b/src/components/form/Form.css
@@ -28,7 +28,7 @@
   border: 1px solid transparent;
   border-radius: var(--bradius);
   background-color: var(--clr-white);
-  box-shadow: 0px 2px 4px hsla(200, 15%, 8%, 0.1);
+  box-shadow: var(--shadow);
 
   transition: border-color var(--transition), height var(--transition);
 }
@@ -95,7 +95,7 @@
   cursor: pointer;
   outline: none;
   transition: border-color var(--transition), width var(--transition);
-  box-shadow: 0px 2px 4px hsla(200, 15%, 8%, 0.1);
+  box-shadow: var(--shadow);
 }
 
 .Form__filter-btn:hover,
@@ -119,7 +119,7 @@
   list-style-type: none;
   background-color: var(--clr-white);
   border-radius: var(--bradius);
-  box-shadow: 0px 2px 4px hsla(200, 15%, 8%, 0.1);
+  box-shadow: var(--shadow);
 
   animation-name: slide;
   animation-duration: 0.2s;
