--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -1,13 +1,6 @@
 .Header {
   --fs-logo: 18px;
 
-  padding-inline: var(--spacing-inline);
-  height: 99px;
-
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-
   font-weight: var(--fw-500);
 
   background-color: var(--clr-white);
@@ -21,8 +14,19 @@
   }
 }
 
+.Header__container {
+  max-width: 1440px;
+  height: 99px;
+  margin-inline: auto;
+  padding-inline: var(--spacing-inline);
+
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
 @media screen and (min-width: 46.875em) {
-  .Header {
+  .Header__container {
     height: 80px;
   }
 }
