Feat: Merge branch redo
- establish route
- details route
- update useFetch to properly handle errors

--- a/src/index.css
+++ b/src/index.css
@@ -69,3 +69,13 @@ main {
 img {
   width: 100%;
 }
+
+a {
+  text-decoration: unset;
+  outline: none;
+}
+
+a:link,
+a:visited {
+  color: inherit;
+}
