--- a/src/routes/details/Details.css
+++ b/src/routes/details/Details.css
@@ -2,6 +2,7 @@
   display: flex;
   align-items: center;
   max-width: 100px;
+  margin-block-end: 80px;
   padding-block: 8px;
   padding-inline: 20px;
   gap: 8px;
